Update configuration files to work with the latest version of mainline
Signed-off-by: Derek Straka <derek@asterius.io>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,3 +7,6 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 BBFILE_COLLECTIONS += "meta-webserver-test"
 BBFILE_PATTERN_meta-webserver-test := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-webserver-test = "7"
+
+LAYERDEPENDS_{layername} = "core"
+LAYERSERIES_COMPAT_{layername} = "{compat}"
